import fonts, make variables

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,1 +1,10 @@
+// fonts
+
 $roboto-font: "Roboto", sans-serif;
+$poppins-font: "Poppins", serif;
+$belgrano-font: "Belgrano", serif;
+
+// colors
+$button-background-color: #FA504D;
+$font-primary-color: #2E2F38;
+$font-secondary-color: #8E8E8E;
