--- a/src/sass/themes/_default.scss
+++ b/src/sass/themes/_default.scss
@@ -1,7 +1,31 @@
-html * {
-    font-family: $roboto-font;
-}
- 
 body {
-    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    font-family: $poppins-font;
+    background-image: url(img/background.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 1000px;
+
 } 
+
+.page{
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1600px;
+    box-sizing: border-box;
+}
+
+main{
+    display: grid;
+    grid-column: 2fr 1fr;
+}
+
+.grid_left{
+    grid-column: 1;
+}
+
+.grid_right{
+    grid-column: 2;
+}
