--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -1,13 +1,53 @@
 .content{
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: end;
     position: relative;
-    img{
-        width: 528px;
-        height: 544px ;
+    figure{
+        img{
+            width: 528px;
+            height: 544px ;
+        }
+        figcaption{
+            display: none;
+        }
     }
-    figcaption{
-        display: none;
+    .nft_data{
+        background-color: white;
+        width: 550px;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        }
+        .nft_header{
+            grid-row: 1;
+            display: flex;
+            justify-content: space-between;
+            padding: 15px;
+            max-width: 500px;
+            .owner_data{
+                display: flex;
+                gap: 10px;
+                img{
+                    max-width: 50px;
+                }
+            }
+
+            p{
+                font-weight: 500;
+                font-size: 22px;
+                &:first-child{
+                    font-size: 16px;
+                    color: $font-secondary-color;
+                }
+
+        }
+        .nft_buttons{
+            grid-row: 2;
+            display: flex;
+            a{
+                color: black;
+            }
+        }
     }
+
 }
