nft data styles

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -8,3 +8,4 @@ $belgrano-font: "Belgrano", serif;
 $button-background-color: #FA504D;
 $font-primary-color: #2E2F38;
 $font-secondary-color: #8E8E8E;
+$background-color-black: #2E2F38
