--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -5,8 +5,8 @@
     position: relative;
     figure{
         img{
-            width: 528px;
-            height: 544px ;
+            max-width: 528px;
+            height: auto ;
         }
         figcaption{
             display: none;
@@ -15,13 +15,12 @@
     .nft_data{
         background-color: white;
         width: 600px;
-        padding: 50px;
+        padding: 30px;
         display: grid;
         grid-template-rows: 1fr 1fr;
-        position: relative;
-        bottom: 100px;
-        left: 30px;
-
+        gap: 30px;
+        margin-top: -60px;
+        margin-right: -25px;
         }
         .nft_header{
             grid-row: 1;
@@ -38,7 +37,8 @@
                 background-color: black;
                 position: absolute;
                 top: 75px;
-                left: -25px;
+                left: 50%;
+                transform: translateX(-50%);
             }
             .owner_data{
                 display: flex;
@@ -62,8 +62,39 @@
     .nft_buttons{
         grid-row: 2;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         justify-content: space-around;
+        
+        a{
+            color: $button-background-color;
+            text-decoration: none;
+            font-size: 18px;
+            text-align: center;
+            font-weight: 500;
+            width: 50%;
+            display: flex;
+            justify-content: center;
+
+            &:last-child{
+                &:hover{
+                    text-decoration: underline;
+                }
+                
+            }
+        }
+
+        
+        .bid_button{
+            background-color: $button-background-color;
+            padding: 5px 30px;
+            color: white;
+            transition: 0.5s ease;
+            
+
+            &:hover{
+                background-color: $background-color-black;
+            }
+        }
     }
 
 }
