--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -18,6 +18,7 @@
             font-size: 24px;
             color: $font-secondary-color;
             position: relative;
+            margin-top: 20px;
             &::before{
                 content: "";
                 width: 85px;
@@ -27,6 +28,53 @@
                 position: absolute;
                 top:26px;
             }
+        }
+
+        ul.hero_buttons{
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 50px;
+            margin-top: 30px;
+            li{
+                list-style-type: none;
+                a{
+                    text-decoration: none;
+                    font-size: 18px;
+                    &.explore_button{
+                        display: inline-block;
+                        background-color: $button-background-color;
+                        padding: 10px 70px;
+                        color: white;
+                        transition: 0.5s ease;
+
+                        &:hover{
+                            background-color: $font-primary-color;
+                        }
+                    }
+
+                    &.arrow{
+                        font-weight: 500;
+                        color: $font-primary-color;
+                        position: relative;
+                        text-decoration: underline;
+                        display: flex;
+                        align-items: center;
+                        gap: 8px;
+                        transition: 0.5s ease;
+                        img{
+                            width: 30px;
+                        }
+
+                        &:hover{
+                            font-size: 24px;
+                            font-weight: bold;
+                        }
+
+                    }
+                }
+            }
+
         }
     }
     
