--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -74,7 +74,7 @@
                 text-decoration: none;
                 font-size: 18px;
                 text-align: center;
-                font-weight: 500;
+                font-weight: bold;
                 width: 50%;
                 display: flex;
                 justify-content: center;
@@ -115,6 +115,7 @@
                     color: $button-background-color;
                     font-size: 32px;
                     font-weight: 600;
+                    
                 }
                 
                 
