--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,5 +1,5 @@
 .hero{
-    margin-top: 50px ;
+    margin-top:30px ;
     padding-right: 30px;
     .hero_main{
         h1{
@@ -36,6 +36,7 @@
             align-items: center;
             gap: 50px;
             margin-top: 30px;
+            margin-bottom: 50px;
             li{
                 list-style-type: none;
                 a{
@@ -77,7 +78,26 @@
 
         }
     }
-    
+    .gallery{
+        h2{
+            font-family: $belgrano-font;
+            font-weight: 500;
+            color: $font-primary-color;
+            font-size: 32px;
+            margin-bottom: 20px;
+
+        }
+        article.nft-art{
+            display: flex;
+            gap: 30px;
+            img {
+                border: 1px solid black;
+                padding: 10px;
+                width: 300px;
+            }
+        }
+
+    }
 
 
 
