--- a/src/sass/themes/_default.scss
+++ b/src/sass/themes/_default.scss
@@ -2,30 +2,33 @@ body {
     margin: 0;
     padding: 0;
     font-family: $poppins-font;
-    background-image: url(img/background.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 1000px;
+    min-height: 100vh;
+    &::before{
+        content: "";
+        width: 42%;
+        background-color: $font-primary-color;
+        background-image: url(/img/background-artzie.svg);
+        background-repeat: no-repeat;
+        background-position: bottom right;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        z-index: -1;
+    }
+}
 
-} 
 
 .page{
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 1rem;
+    padding-right: 1rem;
     margin-left: auto;
     margin-right: auto;
     max-width: 1600px;
-    box-sizing: border-box;
 }
-
 main{
+    min-height: 100%;
     display: grid;
-    grid-column: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
 }
 
-.hero{
-    grid-column: 1;
-}
-
-.content{
-    grid-column: 2;
-}
